<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newQuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:inputType="text"
        android:maxLength="100"
        android:hint="@string/newQuestionTitle" />

    <EditText
        android:id="@+id/newQuestionAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newQuestionTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="15"
        android:maxLength="100"
        android:hint="@string/writeCorrectAnswer"
        android:inputType="text" />

    <EditText
        android:id="@+id/newQuestionAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newQuestionAnswer1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:maxLength="100"
        android:hint="@string/answer2"
        android:inputType="text" />

    <EditText
        android:id="@+id/newQuestionAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newQuestionAnswer2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:maxLength="100"
        android:hint="@string/answer3"
        android:inputType="text" />

    <EditText
        android:id="@+id/newQuestionAnswer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newQuestionAnswer3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/answer4"
        android:maxLength="100"
        android:inputType="text" />

    <Button
        android:id="@+id/newQuestionDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/newQuestionAnswer4"
        android:layout_below="@+id/newQuestionAnswer4"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_alignParentStart="true"
        android:onClick="createNewQuestion"
        android:textStyle="italic"
        android:text="@string/done"
        android:textAllCaps="false"
        android:background="@drawable/pink_button"/>

    <Button
        android:id="@+id/newQuestionCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/newQuestionAnswer4"
        android:layout_marginRight="70dp"
        android:onClick="cancelNewQuestion"
        android:textStyle="italic"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@drawable/pink_button"/>

</RelativeLayout>