<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/newQuizMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:visibility="visible">

    <EditText
        android:id="@+id/quizNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="15"
        android:maxLength="30"
        android:singleLine="true"
        android:hint="@string/quizName" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/questions_recycler_view"
            android:layout_below="@+id/quizNameEditText"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="70dp"
            android:clipToPadding="false"
            />

    <Button
        android:id="@+id/addQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/createButtonsBuffer"
        android:onClick="addQuestion"
        android:background="@drawable/pink_button"
        android:padding="5dp"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:text="@string/addQuestion" />

        <Button
            android:id="@+id/createButtonsBuffer"
            android:layout_width="60dp"
            android:layout_height="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:clickable="false"
            />

    <Button
        android:id="@+id/createQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/createButtonsBuffer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="createQuiz"
        android:background="@drawable/pink_button"
        android:padding="5dp"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:text="@string/createQuiz" />

    </RelativeLayout>



</RelativeLayout>