<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/editQuizLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/mainBackgroundColor">

    <TextView
        android:id="@+id/quizNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:ems="10"
        android:maxLength="30"
        android:hint="Quiz Name"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginBottom="18dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/edit_quiz_questions_recycler_view"
        android:layout_below="@+id/quizNameTextView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="75dp"
        android:clipToPadding="false"

        />


    <Button
        android:id="@+id/editQuizAddQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/deleteQuizButton"
        android:layout_marginBottom="20dp"
        android:onClick="addQuestion"
        android:background="@drawable/pink_button"
        android:padding="5dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:text="@string/addQuestion" />

        <Button
            android:id="@+id/editButtonsBuffer"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:clickable="false"
            />

    <Button
        android:id="@+id/editQuizMainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/deleteQuizButton"
        android:layout_marginBottom="20dp"
        android:onClick="applyChange"
        android:background="@drawable/pink_button"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:text="@string/applyChange" />

    <Button
        android:id="@+id/deleteQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="deleteQuiz"
        android:background="@drawable/red_button"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/deleteQuiz" />

    </RelativeLayout>




</RelativeLayout>